# docs/swagger.yaml
@@ -16,14 +16,73 @@ definitions:
       balance:
         type: integer
       currency:
-        enum:
-        - AZN
-        - USD
         type: string
       owner:
         type: string
     required:
     - balance
+    - currency
+    type: object
+  account.TransferInput:
+    properties:
+      amount:
+        type: integer
+      currency:
+        type: string
+      from_account_id:
+        type: integer
+      to_account_id:
+        type: integer
+    type: object
+  db.Account:
+    properties:
+      balance:
+        type: integer
+      created_at:
+        type: string
+      currency:
+        type: string
+      id:
+        type: integer
+      owner:
+        type: string
+    type: object
+  db.Entry:
+    properties:
+      account_id:
+        type: integer
+      amount:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+    type: object
+  db.Transfer:
+    properties:
+      amount:
+        type: integer
+      created_at:
+        type: string
+      from_account_id:
+        type: integer
+      id:
+        type: integer
+      to_account_id:
+        type: integer
+    type: object
+  db.TransferTxResult:
+    properties:
+      from_account:
+        $ref: '#/definitions/db.Account'
+      from_entry:
+        $ref: '#/definitions/db.Entry'
+      to_account:
+        $ref: '#/definitions/db.Account'
+      to_entry:
+        $ref: '#/definitions/db.Entry'
+      transfer:
+        $ref: '#/definitions/db.Transfer'
     type: object
   errors.Response:
     properties:
@@ -129,6 +188,31 @@ paths:
           schema:
             $ref: '#/definitions/errors.Response'
       summary: Get a account by ID.
+      tags:
+      - Account
+  /transfer:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: transfer
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/account.TransferInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.TransferTxResult'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Response'
+      summary: Transfer money between 2 accounts
       tags:
       - Account
 schemes:
